Fixed button size being too big

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -12,7 +12,7 @@
         }
     }
     .flat-button{
-        font-size: 13px;
+        font-size: 11px;
         font-weight: 400;
         letter-spacing: 4px;
         font-family: sans-serif;
